<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>group14_ex4</name>
  <version>0.0.0</version>
  <description>Exercize 4 </description>
  <maintainer email="rao.luca@studenti.unipd.it">Rao Luca</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>group14_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  
  <depend>ament_index_python</depend> 
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
